Pushing WIP after a mishap requiring reinstallation of OS on my devbox

--- a/sbdotnet/sbdotnet.csproj
+++ b/sbdotnet/sbdotnet.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="if &quot;$(ConfigurationName)&quot; == &quot;Release&quot; (&#xD;&#xA;    copy &quot;$(TargetDir)\*.dll&quot; &quot;E:\code\libs\&quot;&#xD;&#xA;)&#xD;&#xA;if &quot;$(ConfigurationName)&quot; == &quot;Debug&quot; (&#xD;&#xA;    echo &quot;DEBUG: Not copying lib&quot;&#xD;&#xA;)" />
+    <Exec Command="if &quot;$(ConfigurationName)&quot; == &quot;Release&quot; (&#xD;&#xA;    copy &quot;$(TargetDir)\*.dll&quot; &quot;D:\code\libs\&quot;&#xD;&#xA;)&#xD;&#xA;if &quot;$(ConfigurationName)&quot; == &quot;Debug&quot; (&#xD;&#xA;    echo &quot;DEBUG: Not copying lib&quot;&#xD;&#xA;)" />
   </Target>
 
 </Project>
